--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ button {
 /* DARK MODE with Green Accent */
 .dark-mode {
   background-color: #121212;
-  color: #f0f0f0;
+  color: #00ff88;
 }
 
 .dark-mode section {
